# ord-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml
examples/: deploy.rs  edict.rs  etch.rs  generate_address.rs  mint.rs  print_script.rs  reveal_transaction.rs  send_inscription.rs  transfer.rs
examples/utils/: args.rs  fee.rs  mod.rs  rpc_client.rs  transaction.rs
scripts/: test.sh
src/: brc20.rs  constants.rs  error.rs  inscription.rs  lib.rs  op.rs  result.rs  transaction.rs  wallet.rs
src/indexer/: README.md
src/inscription/: README.md  brc20.rs  iid.rs  nft.rs  parser.rs
src/inscription/nft/: id.rs  nft_tests.rs
src/ordinals_v2/: README.md  indexer.rs  inscription.rs  mod.rs
src/ordinals_v2/inscription/: README.md  brc20.rs  constants.rs  nft.rs
src/ordinals_v2/inscription/nft/: nft_tests.rs
src/ordinals_v2/wallet/: builder.rs
src/transaction/: builder.rs  commit_transaction.rs  mod.rs  parser.rs  reveal_transaction.rs  signature.rs  signer.rs  taproot.rs
src/utils/: constants.rs  fees.rs  h160.rs  mod.rs  push_bytes.rs  sha256.rs  test_utils.rs
src/utils/test_utils/: rpc_client.rs
src/wallet/: builder.rs  builder2.rs  parser.rs
src/wallet/builder/: rune.rs  signer.rs  signer2.rs  taproot.rs
src/wallet/builder/taproot/: taproot_keypair.rs
src/wallet/parser/: envelope.rs
