[package]
name = "ord-rs"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
version = "0.1.0"
authors = ["Finity Technologies"]
description = "A library for working with Ordinal inscriptions."
repository = "https://github.com/bitfinity-network/ord-rs"
documentation = "https://docs.rs/ord-rs"
edition = "2021"

[dependencies]
async-trait = "0.1"
bitcoin = { version = "0.31", features = ["rand"] }
ciborium = "0.2"
hex = "0.4"
http = "1"
log = "0.4"
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
argh = "0.1"
bip39 = "2"
env_logger = "0.11"
hex = "0.4"
hex-literal = "0.4"
rand = { version = "0.8" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "generate-address"
path = "examples/generate_address.rs"

[[example]]
name = "transfer"
path = "examples/transfer.rs"

[[example]]
name = "mint"
path = "examples/mint.rs"

[[example]]
name = "deploy"
path = "examples/deploy.rs"

[[example]]
name = "send-inscription"
path = "examples/send_inscription.rs"

[[example]]
name = "print-script"
path = "examples/print_script.rs"
