[package]
name = "ord-rs"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
version = "0.2.2"
authors = ["Finity Technologies"]
description = "A library for working with Ordinal inscriptions."
repository = "https://github.com/bitfinity-network/ord-rs"
documentation = "https://docs.rs/ord-rs"
edition = "2021"

[features]
default = ["rand"]
rand = ["bitcoin/rand", "dep:rand"]
rune = ["ordinals"]

[dependencies]
async-trait = "0.1"
bitcoin = { version = "0.31", features = ["serde"] }
ciborium = "0.2"
hex = "0.4"
log = "0.4"
ordinals = { version = "0.0.9", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
argh = "0.1"
bip39 = "2"
env_logger = "0.11"
hex = "0.4"
hex-literal = "0.4"
rand = { version = "0.8" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "generate-address"
path = "examples/generate_address.rs"
required-features = ["rand"]

[[example]]
name = "transfer"
path = "examples/transfer.rs"
required-features = ["rand"]

[[example]]
name = "mint"
path = "examples/mint.rs"
required-features = ["rand"]

[[example]]
name = "deploy"
path = "examples/deploy.rs"
required-features = ["rand"]

[[example]]
name = "send-inscription"
path = "examples/send_inscription.rs"
required-features = ["rand"]

[[example]]
name = "print-script"
path = "examples/print_script.rs"
required-features = ["rand"]

[[example]]
name = "edict"
path = "examples/edict.rs"
required-features = ["rune"]

[[example]]
name = "etch"
path = "examples/etch.rs"
required-features = ["rune"]
